hphp/hack/test/typecheck/closure_strict_def_typecheck.php.exp
File "closure_strict_def_typecheck.php", line 17, characters 28-29:
Could not find static method f1 in type Foo (Typing[4090])
File "closure_strict_def_typecheck.php", line 13, characters 7-9:
Declaration of Foo is here
